--- a/app/jade-mobile/hotel-booking-5.jade
+++ b/app/jade-mobile/hotel-booking-5.jade
@@ -15,16 +15,15 @@ block main
       span.block.text-14px.f-bold.text-u-c Status Penerbitan E-Ticket Anda
       p.m-t-md.text-black.text-14px Terima kasih telah melakukan pemesanan di Saptatour.com. Di bawah ini adalah status pemesanan Anda. Halaman ini akan diperbaharui secara otomatis. Mohon jangan tutup halaman ini sampai proses selesai.
 
-      .process-creating-ticket-block.b-b.m-b-lg
-        .bg-light.message.process.text-black.pos-rlt.m-b-xs
-          i.ico.ico-mobile.ico-gear.pos-abt
-          span.block.f-bold.text-14px Sedang memproses E-Ticket
-          p.text-black.m-b-none.text-sm Pembayaran anda telah kami terima dan saat ini E-Ticket Anda sedang dalam proses penerbitan di sistem kami. Terima kasih untuk bersabar.
+      .download-ticket-block.b-b.m-b-lg
+        .bg-light.text-black.pos-rlt
+          i.ico.ico-mobile.ico-check.pos-abt
+          span.block.f-bold.text-14px E-Ticket Anda Telah Terbit!
+          p.text-black.m-b-none.text-sm Mohon cek Inbox/Spam alamat email <strong>Anissa@gmail.com</strong> untuk mendapatkan e-ticket anda.
 
-        .bg-light.creating.process.text-black.pos-rlt
-          i.ico.ico-mobile.ico-waiting.pos-abt
-          span.block E-Ticket akan diterbitkan dalam:
-          span.block.f-bold.text-primary.duration 29 Menit 46 Detik
+        .block.pad-v-10 E-Ticket dapat diunduh disini:
+
+        a.btn-download-ticket.m-b-lg(href="#") Download E-Ticket
 
       .block.ticket-detail-info
         span.block.text-u-c.text-14px.f-bold Tanda BUkti Pemesanan <br/> (BUkan Tiket)
